samples/_failures_safe/1761563582_214b91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1b532f3.c: In function ‘main’:
./samples/SAFE/__tmp_c1b532f3.c:141:5: error: expected declaration or statement at end of input
  141 |     }
      |     ^
